--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,6 @@
 body {
   padding: 0;
   margin: 0;
-
-  /* make it look decent enough */
-  background: #232323;
-  color: #cdcdcd;
   font-family: "Avenir Next", "Avenir", sans-serif;
 }
 
@@ -26,9 +22,9 @@ header {
 main {
   grid-column: 2 / 5;
   min-height: 500px;
-  background-color: rgba(126, 137, 135, 1);
-  grid-template-columns: repeat(auto-fill, minmax(1fr, max-content));
+  grid-template-columns: repeat(auto-fill, 290px);
   display: grid;
+  grid-gap: 10px;
 }
 
 aside {
@@ -123,10 +119,61 @@ a:hover {
   height: auto;
 }
 
-.img-wrapper img {
+ img {
   max-width: 100%;
   height: auto;
 }
+
+.single-post {
+  max-width: 300px;
+  min-width: 150px;
+  height: auto;
+  box-shadow: 0 2px 5px 0;
+}
+
+.single-post .img-wrp {
+  max-width: 100%;
+  height: auto;
+}
+
+
+.post-body {
+  padding: 20px;
+}
+
+.title, .author, .info {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.author {
+  color: #646464;
+  font-size: 12px;
+}
+
+.info {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.divider {
+  border-top: 1px solid grey;
+  margin: 10px 0;
+}
+
+.indicators .single {
+  margin-right: 10px;
+}
+
+.indicators {
+  display: flex;
+}
+
 
 #menuToggle {
   display: none;
