--- a/styles/main.css
+++ b/styles/main.css
@@ -128,6 +128,7 @@ a:hover {
   max-width: 300px;
   min-width: 150px;
   height: auto;
+  border-radius: 3px;
   box-shadow: 0 2px 5px 0;
 }
 
@@ -137,7 +138,12 @@ a:hover {
   overflow: hidden;
 }
 
-.single-post .img-wrp img:hover{
+.single-post:hover {
+  cursor: pointer;
+  background: #e1dfdf;
+}
+
+.single-post:hover img{
   transition: 0.3s;
   opacity: 0.8;
   transform: scale(1.2);
