--- a/styles/main.css
+++ b/styles/main.css
@@ -120,6 +120,22 @@ aside .social{
 footer {
   grid-column: 1 / -1;
   background-color: rgba(75, 74, 103, 1);
+  grid-template-columns: repeat(auto-fill, 290px);
+
+}
+
+footer ul li {
+  display: block;
+}
+
+.footer-left {
+  margin-right: 35px;
+  border-right: 1px solid #fff;
+  padding-right: 35px;
+}
+
+.footer-right {
+  flex: 0 1 20%;
 }
 
 a {
@@ -169,6 +185,10 @@ a:hover {
   background: #000;
   color: #fff;
   border-radius: 50%;
+}
+
+.right {
+  margin-left: 25px;
 }
 
 .icon:hover {
@@ -364,14 +384,13 @@ a:hover {
 #menu {
   position: absolute;
   width: 300px;
-  /*margin: -100px 0 0 -50px;*/
   padding: 125px 50px 50px 50px;
 
   bottom: -100vh;
   top: -80px;
   left: -30px;
 
-  background: #ededed;
+  background: rgba(100, 100, 100, 1);
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
 
