--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@ aside .social{
   border-radius: 50%;
 }
 
-.top-author {
+.hidden-aside-top {
   display: flex;
   justify-content: center;
 }
@@ -310,120 +310,3 @@ a:hover {
   display: flex;
 }
 
-
-#menuToggle {
-  display: none;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-
-  z-index: 1;
-
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle input {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-
-  cursor: pointer;
-
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-
-  -webkit-touch-callout: none;
-}
-
-#menuToggle span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-
-  background: #cdcdcd;
-  border-radius: 3px;
-
-  z-index: 1;
-
-  transform-origin: 4px 0px;
-
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-  background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-  opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-#menuToggle input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-#menuToggle input:checked ~ span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-#menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-#menu {
-  position: absolute;
-  width: 300px;
-  padding: 125px 50px 50px 50px;
-
-  bottom: -100vh;
-  top: -80px;
-  left: -30px;
-
-  background: rgba(100, 100, 100, 1);
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-
-  transform-origin: 0% 0%;
-  transform: translate(-140%, 0);
-
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-#menu li {
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-#menuToggle input:checked ~ ul {
-  transform: none;
-}
-
-@media screen and (max-width: 767px) {
-  header  {
-    justify-content: center;
-  }
-
-  #menuToggle, .header-search, .hamburger, .hidden-large {
-    display: block !important;
-  }
-
-  aside, .social, .menu, .right, .author-info {
-    display: none;
-  }
-
-  .hidden-aside-bottom, hidden-aside-top {
-    display: block;
-    grid-column: 2 / 6;
-  }
-}
